[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["John Shaw <jshaw@shawnation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "*"
itertools = "*"
lazy_static = "*"
num = "0.1"
regex = "*"
serde = "*"
